# seiya

./: .gitmodules  Dockerfile  README.md  pubspec.yaml
android/app/: build.gradle
lib/: main.dart
lib/application/: application_web.dart
lib/application/components/svg/: action.dart  export.dart  svgviewer.dart
lib/application/desktop/: route.dart
lib/application/desktop/pages/svg/: page.dart
lib/application/mobile/: home.dart
lib/application/web/: route.dart
lib/application/web/pages/svg/: action.dart  source.dart  svgeditor.dart
lib/models/: resource.dart
lib/models/svg/: state.dart  state.g.dart
lib/services/files/: files.dart
lib/services/tools/: tools.dart
lib/services/web/: articles.dart  tools.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
plugins/seiyapkg/: README.md  build.py  ffigen.yaml  pubspec.yaml
plugins/seiyapkg/android/: build.gradle  settings.gradle
plugins/seiyapkg/android/src/main/: AndroidManifest.xml
plugins/seiyapkg/example/: README.md  pubspec.yaml
plugins/seiyapkg/example/android/app/: build.gradle.kts
plugins/seiyapkg/example/integration_test/: plugin_integration_test.dart
plugins/seiyapkg/example/ios/Runner/: Info.plist
plugins/seiyapkg/example/ios/Runner.xcodeproj/: project.pbxproj
plugins/seiyapkg/example/ios/RunnerTests/: RunnerTests.swift
plugins/seiyapkg/example/lib/: main.dart
plugins/seiyapkg/example/linux/: CMakeLists.txt
plugins/seiyapkg/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
plugins/seiyapkg/example/linux/runner/: my_application.cc
plugins/seiyapkg/example/macos/Flutter/: GeneratedPluginRegistrant.swift
plugins/seiyapkg/example/test/: widget_test.dart
plugins/seiyapkg/example/web/: index.html  manifest.json
plugins/seiyapkg/example/windows/: CMakeLists.txt
plugins/seiyapkg/example/windows/runner/: main.cpp  (+1 more)
plugins/seiyapkg/ios/: seiyapkg.podspec
plugins/seiyapkg/ios/seiyapkg/: Package.swift
plugins/seiyapkg/lib/: bindings.dart  generated_bindings.dart  seiyapkg.dart  seiyapkg_method_channel.dart  seiyapkg_platform_interface.dart  seiyapkg_web.dart
plugins/seiyapkg/linux/: CMakeLists.txt  seiyapkg_plugin.cc  seiyapkg_plugin_private.h
plugins/seiyapkg/linux/test/: seiyapkg_plugin_test.cc
plugins/seiyapkg/macos/: seiyapkg.podspec
plugins/seiyapkg/macos/seiyapkg/: Package.swift
plugins/seiyapkg/src/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  module.modulemap  vcpkg.json
plugins/seiyapkg/src/examples/cmain/: main.c
plugins/seiyapkg/src/seiyapkg/: seiyapkg.cpp  seiyapkg.h
plugins/seiyapkg/test/: seiyapkg_method_channel_test.dart  seiyapkg_test.dart
plugins/seiyapkg/windows/: CMakeLists.txt  seiyapkg_plugin.cpp  seiyapkg_plugin.h  seiyapkg_plugin_c_api.cpp
plugins/seiyapkg/windows/test/: seiyapkg_plugin_test.cpp
server/: package-lock.json  package.json  rollup.config.mjs
server/src/server/: config.ts  server.ts
test/: widget_test.dart
web/: index.html
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+16 files in other folders)
